--- a/readSetting/appsettings.json
+++ b/readSetting/appsettings.json
@@ -1,7 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = dynamicAmd.ak17.club; Database = fkjMgt; User ID = sa; Password = 105gZxiongfa*;"
+  },
   "mySettings": {
-    "Value1": "one",
-    "Value2": "six"
-
+    "Interval": 5
   }
 }
